# dentalcrm

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  start.sh
dentalcrm/: asgi.py  dependencies.py  exceptions.py  routers.py  settings.py
e_med_card/: models.py
emedcard/: controllers.py  models.py  schemas.py
financials/: controllers.py  models.py  schemas.py
financials/services/: get_date_range_inclusive.py
migrations/: env.py
migrations/versions/: 08de75090048_.py  0e2b8950f271_.py  154a68fc0a30_.py  23e80f61c310_.py  24f1d8dbe0eb_.py  297e52ed70f7_.py  2d17b10f78cb_.py  4aa92573553a_.py  4ff1251ddee5_.py  76f015bffeb1_.py  77fca6b9d70d_.py  7bcd0bc196df_.py  8467d90e8746_.py  868741462087_.py  9d4d965d306b_.py  a4e5683b00b2_.py  a7ea6716c95d_.py  ad18ac56adb5_.py  b20fb7cc89ff_.py  c6970f473e04_.py  e75c72afb20b_.py  ec08d97db3a5_.py  f2b8d5783e7f_.py  f3a240da4a92_.py  f603db8ff0b0_.py
users/: controllers.py  models.py  schemas.py  types.py
