[tool.poetry]
name = "dentalcrm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
ormar = "^0.12.1"
asyncpg = "^0.27.0"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
black = "^23.3.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
alembic = "^1.10.2"
aiofiles = "^23.1.0"
python-multipart = "^0.0.6"
pytest = "^7.3.1"
faker = "^18.6.1"
pytest-factoryboy = "^2.5.1"
httpx = "^0.24.0"
fastapi-jwt-auth = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
